--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8">
-		<title>Lerhmittelverwaltung</title>
+		<title>Lerhmittelverwaltuung</title>
 		<meta name="description" content="Lerhmittelverwaltung">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
