--- a/index.html
+++ b/index.html
@@ -1,25 +1,86 @@
-<!doctype html>
 <html lang="de">
-	<head>
-		<meta charset="utf-8">
-		<title>Lerhmittelverwaltuung</title>
-		<meta name="description" content="Lerhmittelverwaltung">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<script src="js/jquery.js"></script>
-	</head>
-	<body>
-		<div class="login-area">
-			<div class="login">
-				<form id="login">
-					<label>GSO Lehrmittelverwaltung <span class="right">v1.04</span></label>
-					<hr />
-					<input type="text" placeholder="Benutzername" />
-					<input type="password" placeholder="Kennwort" />
-					<input type="submit" />
-				</form>
-			</div>
-		</div>
-		<script src="js/main.js"></script>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <title>Lehrmittelverwaltung - Impressum</title>
+    <meta name="description" content="Lehrmittelverwaltung - Impressum">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="scss/main.css">
+    <script src="js/jquery.js"></script>
+</head>
+<body>
+<div class="content-wrap headline">
+    <div class="center-wrap ">
+        <h1 class="Gradient">Impressum
+            <span class="G1" aria-hidden="true">Impressum</span>
+            <span class="G2" aria-hidden="true">Impressum</span>
+            <span class="G3" aria-hidden="true">Impressum</span>
+            <span class="G4" aria-hidden="true">Impressum</span>
+            <span class="G5" aria-hidden="true">Impressum</span>
+        </h1>
+    </div>
+</div>
+<div class="content-wrap background">
+    <img src="img/guile/stage_background_guile.gif">
+</div>
+<div class="content-wrap profile">
+    <div class="center-wrap">
+        <div class="author">
+            <div class="image"><img src="img/profil/artur.jpg"></div>
+            <div class="description">
+                <span class="name"><p>Artur Erotschkin</p></span>
+                <span class="rule"><p>Projektleiter, Frontendentwickler</p></span>
+                <span class="shorttext"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="content-wrap profile">
+    <div class="center-wrap">
+        <div class="author">
+            <div class="image"><img src="img/profil/markus.jpg"></div>
+            <div class="description">
+                <span class="name"><p>Markus Laubenthal</p></span>
+                <span class="rule"><p>Backendentwickler</p></span>
+                <span class="shorttext"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></span>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="content-wrap profile">
+    <div class="center-wrap">
+        <div class="author">
+            <div class="image"><img src="img/profil/milan.jpg"></div>
+            <div class="description">
+                <span class="name"><p>Milan Denic</p></span>
+                <span class="rule"><p>Controller</p></span>
+                <span class="shorttext"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></span>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="content-wrap profile">
+    <div class="center-wrap">
+        <div class="author">
+            <div class="image"><img src="img/profil/patrick.jpg"></div>
+            <div class="description">
+                <span class="name"><p>Patrick Hippler</p></span>
+                <span class="rule"><p>Controller</p></span>
+                <span class="shorttext"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></span>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="content-wrap">
+    <div class="center-wrap small">
+        <audio controls autoplay loop id="bgmusic">
+            <source src="sound/Guile_theme.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+</div>
+<script src="js/main.js"></script>
+</body>
 </html>
