mvoed Impressum to subfolder

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -1,7 +1,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Lehrmittelverwaltung - Impressum</title>
+    <title>LMV - Impressum</title>
     <meta name="description" content="Lehrmittelverwaltung - Impressum">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="scss/main.css">
